--- a/src/components/mystory.css
+++ b/src/components/mystory.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalnia&family=Lora&family=Noto+Sans+KR:wght@100;200;300&display=swap');
+
 .myInfo.close, .specs.close, .addToBag.close{
     display:none;
 }
 
 .my_story{
+    font-family: Pretendard;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,17 +50,26 @@
     cursor: pointer;
 }
 
+.editInfo{
+    background-color: rgb(103, 109, 114);
+    color: white;
+    padding: 0.5vh;
+    border-radius: 5vw;
+    width: 3vw;
+    white-space: nowrap;
+    text-align: center;
+}
+
 .basicInfoTitle{
     position: absolute;
     top: -21vh;
     left: 6vw;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
 }
-
 
 .basicInfo{
     width: 30vw;
-    height: 24vh;
+    height: 28vh;
     border: 2px solid rgba(161, 161, 161, 0.9);
     border-radius: 1vw;
     margin: 0 auto;
@@ -74,7 +86,6 @@
     top: 1vh;
     left: 1vw;
     width: 28vw;
-    font-size: 1.9vh;
 }
 
 .profile{
@@ -83,7 +94,13 @@
     justify-content: space-between;
     border-bottom: 3px solid rgb(215, 215, 215);
     margin: 1vh;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
+    padding: 0.5vh;
+}
+
+.profile_list{
+    display: flex;
+    flex-direction: row;
 }
 
 .emailInfo{
@@ -92,27 +109,32 @@
     justify-content: space-between;
     border-bottom: 3px solid rgb(215, 215, 215);
     margin: 1vh;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
+    padding: 0.5vh;
 }
 
 .profileIcon{
     width: 1.5vw;
     height: 3vh;
+    margin-right: 1vw;
 }
 
 .phoneIcon{
     width: 1.5vw;
     height: 3vh;
+    margin-right: 1vw;
 }
 
 .addressIcon{
     width: 1.5vw;
     height: 3vh;
+    margin-right: 1vw;
 }
 
 .emailIcon{
     width: 1.5vw;
     height: 2.5vh;
+    margin-right: 1vw;
 }
 
 .onoffIcon:hover{
@@ -125,7 +147,8 @@
     justify-content: space-between;
     border-bottom: 3px solid rgb(215, 215, 215);
     margin: 1vh;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
+    padding: 0.5vh;
 }
 
 .addressInfo{
@@ -134,15 +157,16 @@
     justify-content: space-between;
     border-bottom: 3px solid rgb(215, 215, 215);
     margin: 1vh;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
+    padding: 0.5vh;
 }
 
 .promotionTitle{
     margin: 1vh;
     position: absolute;
-    top: 7vh;
-    right: 25vw;
-    font-size: 1.9vh;
+    top: 11vh;
+    left: 5.5vw;
+    font-size: 1.6vh;
 }
 
 .promotion{
@@ -152,7 +176,7 @@
     border-radius: 1vw;
     background-color: white;
     position: absolute;
-    top: 11vh;
+    top: 15vh;
     left: 5vw;
 }
 
@@ -162,7 +186,7 @@
     justify-content: space-between;
     border-bottom: 3px solid rgb(215, 215, 215);
     margin: 2vh;
-    font-size: 2vh;
+    font-size: 1.6vh;
 }
 
 .emailAgree{
@@ -171,15 +195,15 @@
     justify-content: space-between;
     border-bottom: 3px solid rgb(215, 215, 215);
     margin: 2vh;
-    font-size: 2vh;
+    font-size: 1.6vh;
 }
 
 .alarmTitle{
     margin: 1vh;
     position: absolute;
-    top: 25vh;
-    right: 24vw;
-    font-size: 1.9vh;
+    top: 29vh;
+    left: 5.5vw;
+    font-size: 1.6vh;
 }
 
 .alarm{
@@ -190,12 +214,12 @@
     margin: 0 auto;
     background-color: white;
     position: absolute;
-    top: 30vh;
+    top: 33vh;
     left: 5vw;
 }
 
 .specsname{
-    font-size: 1.9vh;
+    font-size: 1.6vh;
     position: absolute;
     top: -21vh;
     left: 6vw;
@@ -203,7 +227,7 @@
 
 .checkProd{
     width: 1.5vw;
-    height: 4vh;
+    height: 3.5vh;
 }
 
 .purchaseConfirmList{
@@ -211,8 +235,8 @@
 }
 
 .purchaseConfirm{
-    width: 2vw;
-    height: 4vh;
+    width: 1.5vw;
+    height: 3.5vh;
 }
 
 .sales{
@@ -223,7 +247,7 @@
     margin: 0 auto;
     background-color: white;
     overflow: auto;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
     position: absolute;
     top: -18vh;
     left: 5vw;
@@ -242,12 +266,23 @@
     margin: 2vh;
 }
 
+.salesInfoImg{
+    width: 2vw;
+    height: 5vh;
+}
+
 .plus{
     text-align: center;
+    border: 1px solid gray;
+    border-radius: 5vw;
+    width: 7vw;
+    margin: 0 auto;
+    padding: 1vh;
+    white-space: nowrap;
 }
 
 .specsname_2{
-    font-size: 1.9vh;
+    font-size: 1.6vh;
     position: absolute;
     top: 2vh;
     left: 6vw;
@@ -261,7 +296,7 @@
     margin: 0 auto;
     background-color: white;
     overflow: auto;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
     position: absolute;
     top: 6vh;
     left: 5vw;
@@ -280,11 +315,16 @@
     margin: 2vh;
 }
 
+.purchaseInfoImg{
+    width: 1.2vw;
+    height: 5vh;
+}
+
 .shoppingBagList{
     position: absolute;
     top: -21vh;
     left: 6vw;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
 }
 
 .shoppingProduct{
@@ -292,12 +332,12 @@
     flex-direction: column;
     align-items: center;
     width: 30vw;
-    height: 20vh;
+    height: 24vh;
     border: 2px solid rgba(161, 161, 161, 0.9);
     border-radius: 1vw;
     margin: 0 auto;
     background-color: white;
-    font-size: 1.9vh;
+    font-size: 1.6vh;
     position: absolute;
     top: -18vh;
     left: 5vw;
@@ -306,15 +346,24 @@
 .shoppingProductInfo{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     border-bottom: 3px solid rgb(215, 215, 215);
     margin: 2vh;
     width: 26vw;
     white-space: nowrap;
+    padding: 1vh;
 }
 
-.shoppingImg{
-    margin: 1vh;
+.shoppingImg_1{
+    width: 4vw;
+    height: 5vh;
+    margin-right: 2vw;
+}
+
+.shoppingImg_2{
+    width: 4vw;
+    height: 5vh;
+    margin-right: 1.8vw;
+
 }
 
 .shoppingProdName{
@@ -323,6 +372,20 @@
 
 .shoppingPrice{
     margin: 1vh;
+}
+
+.shoppingPrice_2{
+    margin: 1vh;
+    margin-left: 8vh;
+}
+
+.shoppingCheck{
+    margin-left: 4vh;
+}
+
+.shoppingCheck2{
+    margin-left: 4vh;
+    margin-bottom: 2vh;
 }
 
 .buyButton{
@@ -340,8 +403,9 @@
     cursor: pointer;
     position: absolute;
     bottom: -25vh;
-    left: 18.5vw;
-    font-size: 2.1vh;
+    left: 6vw;
+    font-size: 1.8vh;
+
 }
 
 /* .admin{
