--- a/src/components/address.css
+++ b/src/components/address.css
@@ -1,19 +1,22 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
 .daumAddress{
     display: none;
 }
 
 .searchAddress{
-    background-color: #2b2b2b;
+    background-color: #909090;
     color: #ffffff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 2.2vh;
     margin: 5px;
+    font-family: Pretendard;
 }
 
 .searchAddress.invalid{
-    background-color: #2b2b2b;
+    background-color: #909090;
     color: #ffffff;
     border: none;
     border-radius: 5px;
