--- a/src/components/knob.css
+++ b/src/components/knob.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
 .knob_container{
     text-align: center;
     justify-content: center;
@@ -6,10 +8,12 @@
     padding: 10px;
     border-radius: 5px;
     overflow-y: auto;
+    font-family: Pretendard;
 }
 
 .knob_title{
-    font-size: 30px;
+    font-size: 3.4vh;
+    font-weight: bold;
 }
 
 .knobCloseBtn{
@@ -43,7 +47,7 @@
     width: 400px;
     height: 20px;
     border: none;
-    font-size: 15px;
+    font-size: 1.8vh;
     margin: 10px;
     border-bottom: 2px solid rgba(161, 161, 161, 0.9);
     padding: 5px;
@@ -52,15 +56,14 @@
 
 .prod_name:focus, .prod_brand:focus, .when_buy:focus, .applicant_name:focus, .applicant_phone:focus, .knob_address:focus, .knob_email:focus, .knob_price:focus, .knob_desc:focus{
     outline: none;
-    background-color: #b8b8b8;
-    border-radius: 10px;
+    border-bottom: 2px solid #202020;
 }
 
 .knob_file{
     width: 400px;
     height: 30px;
     border: none;
-    font-size: 15px;
+    font-size: 2vh;
     margin: 10px;
     border-bottom: 2px solid rgba(161, 161, 161, 0.9);
     background-color: transparent;
@@ -77,7 +80,7 @@
     overflow-y: auto;
     border-radius: 15px;
     border: none;
-    font-size: 15px;
+    font-size: 1.5vh;
     margin: 10px;
     border: 2px solid  rgba(161, 161, 161, 0.9);
     padding: 10px;
@@ -90,7 +93,7 @@
     overflow-y: auto;
     border-radius: 15px;
     border: none;
-    font-size: 15px;
+    font-size: 1.5vh;
     margin: 10px;
     border: 2px solid rgba(161, 161, 161, 0.9);
     padding: 10px;
@@ -102,7 +105,12 @@
 
 .go_knob{
     cursor: pointer;
-    margin: 10px;
+    margin: 3vh auto;
+    width: 25vw;
+    background-color: #909090;
+    color: white;
+    padding: 1vh;
+    border-radius: 3vw;
 }
 
 .go_knob:active{
