--- a/src/components/login.css
+++ b/src/components/login.css
@@ -70,6 +70,7 @@
     width: 28vw;
     height: 6vh;
     border-radius: 30px;
+    border: none;
     background-color: #909090;
     color: white;
     text-align: center;
