--- a/src/pages/paycomplete/paycomplete2.css
+++ b/src/pages/paycomplete/paycomplete2.css
@@ -1,9 +1,13 @@
+
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
 .pay_complete_container_2{
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: row;
     background-image: linear-gradient(to right, rgb(245,181,181) 50%, rgb(200,233,228) 50%);
+    font-family: Pretendard;
 }
 
 .payment_complete_wrapper_left{
