Add/README 추가, 결제페이지 수정

--- a/src/pages/premium/premium1/premium1_1.css
+++ b/src/pages/premium/premium1/premium1_1.css
@@ -244,6 +244,10 @@
     margin-left: 5px;
 }
 
+.premium1_1_BuyBtn:hover{
+    cursor: pointer;
+}
+
 .premium1_1_BagAdd:hover{
     cursor: pointer;
 }
