--- a/src/pages/premium/premium2/premium2_1.css
+++ b/src/pages/premium/premium2/premium2_1.css
@@ -236,6 +236,10 @@
     margin-left: 5px;
 }
 
+.premium2_1_BuyBtn:hover{
+    cursor: pointer;
+}
+
 .premium2_1_BagAdd:hover{
     cursor: pointer;
 }
