--- a/src/components/knob.css
+++ b/src/components/knob.css
@@ -4,53 +4,59 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    margin: 20px auto;
-    padding: 10px;
-    border-radius: 5px;
+    margin: 1vh auto;
+    padding: 5vh;
     overflow-y: auto;
     font-family: Pretendard;
 }
 
 .knob_title{
-    font-size: 3.4vh;
+    font-size: 3vh;
     font-weight: bold;
+    text-align: left;
+    margin-left: 5.7vw;
 }
 
 .knobCloseBtn{
     cursor: pointer;
     position: fixed;
-    top: 20px;
-    right: 30px;
-}
-
-.knobCloseBtn img{
-    width: 30px;
-    height: 30px;
+    top: 5.8vh;
+    right: 2.5vw;
 }
 
 .check{
-    margin: 10px;
+    margin: 1vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    accent-color: gray;
 }
 
 .check_p{
-    margin: 10px;
+    margin: 1vw;
 }
 
 .check_b{
-    margin: 10px;
+    margin: 1vw;
 }
 
-.prod_name, .prod_brand, .when_buy, .knob_address, .knob_email, .knob_price, .applicant_name, .applicant_phone{
-    width: 400px;
-    height: 20px;
+.prod_brand, .when_buy, .knob_address, .knob_email, .knob_price, .applicant_name, .applicant_phone{
+    width: 20vw;
+    height: 5vh;
+    border: none;
+    font-size: 1.8vh;
+    border-bottom: 2px solid rgba(161, 161, 161, 0.9);
+    background-color: transparent;
+}
+
+.prod_name{
+    width: 20vw;
+    height: 5vh;
     border: none;
     font-size: 1.8vh;
     margin: 10px;
+    margin-top: 5vh;
     border-bottom: 2px solid rgba(161, 161, 161, 0.9);
-    padding: 5px;
     background-color: transparent;
 }
 
@@ -60,8 +66,8 @@
 }
 
 .knob_file{
-    width: 400px;
-    height: 30px;
+    width: 20vw;
+    height: 5vh;
     border: none;
     font-size: 2vh;
     margin: 10px;
@@ -75,8 +81,8 @@
 
 .knob_desc{
     resize: none;
-    width: 400px;
-    height: 200px;
+    width: 20vw;
+    height: 30vh;
     overflow-y: auto;
     border-radius: 15px;
     border: none;
@@ -86,10 +92,26 @@
     padding: 10px;
 }
 
+.notice_agree_list{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.notice_agree_txt{
+    margin-top: 0.5vh;
+    margin-right: 0.5vw;
+}
+
+.notice_agree{
+    accent-color: gray;
+    zoom: 1.5;
+}
+
 .knob_notice{
     resize: none;
-    width: 400px;
-    height: 200px;
+    width: 20vw;
+    height: 30vh;
     overflow-y: auto;
     border-radius: 15px;
     border: none;
@@ -106,11 +128,12 @@
 .go_knob{
     cursor: pointer;
     margin: 3vh auto;
-    width: 25vw;
+    width: 20vw;
     background-color: #909090;
     color: white;
     padding: 1vh;
     border-radius: 3vw;
+    border: none;
 }
 
 .go_knob:active{
