--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -17,7 +17,7 @@ body{
     bottom: 0;
     left: 0;
     height: 2.7vw;
-    width: 100%;
+    width: 100vw;
     align-items: center;
     justify-content: center;
     z-index: 5;
@@ -48,7 +48,7 @@ body{
     top: 0%;
     right: 0;
     width: 40vw;
-    height: 94.7vh;
+    height: 95.65vh;
     display: flex;
     flex-direction: block;
     align-items: center;
@@ -79,7 +79,7 @@ body{
 
 .loginContainer{
     position: fixed;
-    top: 43.1%;
+    top: 45.615%;
     right: 0;
     width: 35%;
     height: 50%;
@@ -107,19 +107,18 @@ body{
     position: fixed;
     bottom: 0;
     left: 37%;
-    width: 30%;
-    height: 80%;
+    width: 35vw;
+    height: 83vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center;
     background-color: rgba(255, 255, 255, 0.9);    
     color: rgb(0, 0, 0);
-    border-radius: 10px;
-    transform: translateY(-8.62%);
+    border-radius: 2vh;
+    transform: translateY(-5.3%);
     transition: transform 1.5s ease-in-out;
     z-index: 3;
-    text-align: center;
     opacity: 1;
 }
 
@@ -182,16 +181,16 @@ body{
     position: fixed;
     bottom: -5.88%;
     left: 35%;
-    width: 35%;
-    height: 85%;
+    width: 30%;
+    height: 73%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center;
     background-color: rgba(255, 255, 255, 0.9);    
     color: rgb(0, 0, 0);
-    border-radius: 10px;
-    transform: translateY(-15.12%);
+    border-radius: 2vw;
+    transform: translateY(-14.01%);
     transition: transform 1.5s ease-in-out;
     z-index: 3;
     text-align: center;
@@ -262,17 +261,35 @@ body{
     }
 
     .sidebar nav div{
-        font-size: 1.5rem;
+        font-size: 3.5vh;
         color: white;
         text-decoration: none;
-        margin: 5px 20px;
+        margin: 3vh;
     }
 
     .homeSideBar{
-        font-size: 1.5rem;
+        font-size: 3.5vh;
         margin: 0 2rem;
         color: white;
         text-decoration: none;
+    }
+
+    .aboutLink{
+        color: white;
+        text-decoration: none;
+    }
+
+    .aboutLinkLi{
+        margin-bottom: 3vh;
+    }
+
+    .shopLink{
+        color: white;
+        text-decoration: none;
+    }
+
+    .myStoryLink{
+        font-size: 2.5vh;
     }
 
     .list{
@@ -293,27 +310,44 @@ body{
         align-items: center;
         justify-content: center;
         list-style-type: none;
-        margin: 5px;
     }
 
     .list div:hover{
         cursor: pointer;
     }
 
-    .sellBuyLink, .communityLink, .drawerLink, .myStoryLink, .yourStoryLink{
+    .sellBuyLink, .communityLink, .myStoryLink, .yourStoryLink{
         text-decoration: none;
         color: white;
         font-size: 1.3rem;
     }
 
+    .drawerLink_1, .drawerLink_2, .drawerLink_3{
+        text-decoration: none;
+        color: white;
+        font-size: 3vh;
+    }
+
+    .drawerLinkLi_1{
+        margin-bottom: 1vh;
+    }
+
+    .drawerLinkLi_2{
+        margin-bottom: 1vh;
+    }
+
+    .drawerLinkLi_3{
+        margin-bottom: 6vh;
+    }
+
     .sideLoginBtn{
-        font-size: 15px;
+        font-size: 3vh;
         padding-right: 100px;
         background-color: transparent;
         color: white;
         border: none;
         text-decoration: none;
-        margin: 10px;
+        margin-left: 14vw;
     }
 
     .sideOpenBtn.visible{
